# MegaManXSNESRecomp-macos-linux-wide

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ENHANCEMENTS.md  ISSUES.md  PLAN.md  README.md  config.ini  mmx.ini  snesrecomp.pin
assets/: MegaManX.icns
recomp/: bank00.cfg  funcs.h
resources/: Info.plist
src/: config.c  config.h  gen_stubs.c  macos_backend.h  macos_backend.m  macos_ui.mm  main.c  mmx.vcxproj  mmx_cpu_infra.c  mmx_rtl.c  mmx_rtl.h  post_mortem.c  variables.h
tools/: build-macos.sh  make-linux-appimage.sh  regen.sh
variants/jp/: tier2_coverage.json  tier2_round2.json
variants/jp/config/: bank00.cfg  bank01.cfg  bank02.cfg  bank03.cfg  bank04.cfg  bank06.cfg  bank07.cfg  bank08.cfg  funcs.h
